change some settings

--- a/menu/about.html
+++ b/menu/about.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/syntax.css">
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <!-- Use Atom -->
   <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="MettyZ's Blog" />
   <!-- Use RSS-2.0 -->
@@ -124,7 +125,7 @@
 <p>Hi there! Welcome to my Blog. It’s a place where I record my study.</p>
 
 <p>Hope my content is helpful.
-If you have any problems, any questions or suggestions, feel free to leave a comment or contact me, I’d really appreciate that.</p>
+If you have any problems, any questions or suggestions, feel free to contact me, I’d really appreciate that.</p>
 
 
     </div>
