--- a/menu/contact.html
+++ b/menu/contact.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/syntax.css">
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <!-- Use Atom -->
   <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="MettyZ's Blog" />
   <!-- Use RSS-2.0 -->
@@ -121,7 +122,8 @@
   Contact
 </h1>
 
-<p>If you are having any problems, any questions or suggestions, feel free to <a href="mailto:1243049625@qq.com">email me</a>, or <a href="https://github.com/lenpaul/lagrange/issues/new">file a GitHub issue</a></p>
+<p>If you are having any problems, any questions or suggestions, feel free to <a href="mailto:1243049625@qq.com">email me</a>, or <a href="https://github.com/mettyz/mettyz.github.io/issues/new">file a GitHub issue</a></p>
+
 
 
     </div>
