--- a/menu/writing.html
+++ b/menu/writing.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/syntax.css">
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <!-- Use Atom -->
   <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="MettyZ's Blog" />
   <!-- Use RSS-2.0 -->
