--- a/PR2.html
+++ b/PR2.html
@@ -265,13 +265,6 @@
           <li>
             <p>任务分解法：将长期预测任务分解为 1) 定义运动轨迹 2) 用 footsteps 标注轨迹 3) 生成姿态序列</p>
           </li>
-          <li>
-            <p>生成模型</p>
-
-            <blockquote>
-              <p>Jacob Walker, Kenneth Marino, Abhinav Gupta, and Martial Hebert. The pose knows: Video forecasting by generating pose futures. International Conference on Computer Vision (ICCV), 2017. 【待阅读】</p>
-            </blockquote>
-          </li>
         </ul>
       </li>
     </ul>
@@ -291,7 +284,9 @@
     <p>构建使用双层GRU的自回归模型</p>
 
     <blockquote>
-      <p>与 [1] 不同，团队发现增加第二层GRU具有经验优势，但不必增加到三层【可以验证一下】，设置 hidden size = 1000</p>
+      <p>与 [1] 不同，团队发现增加第二层GRU具有经验优势，但不必增加到三层</p>
+
+      <p>设置 hidden size = 1000</p>
     </blockquote>
 
     <p><br /></p>
