--- a/PR1.html
+++ b/PR1.html
@@ -147,7 +147,7 @@
 
 <p>利用WFDR将较强烈的特征畸变变得温和，利用WDBR矫正较温和的特征畸变</p>
 
-<h2 id="keywords">Keywords</h2>
+<h2 id="glossary">Glossary</h2>
 
 <ul>
   <li>
